objects/SupplierKPIMeasure__c.object
<CustomObject>
    <description>Supplier Measures</description>
    <fields>
        <fullName>KPI_Target__c</fullName>
        <formula>SIPM_KPI__r.KPI_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeasureNum__c</fullName>
        <description>Measure Numeric</description>
        <inlineHelpText>Measure Numeric</inlineHelpText>
        <label>MeasureNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_Date__c</fullName>
        <description>Measure Date</description>
        <inlineHelpText>Measure Date</inlineHelpText>
        <label>Measure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Measure_Enumeration__c</fullName>
        <description>Measure Enumeration</description>
        <inlineHelpText>Measure Enumeration</inlineHelpText>
        <label>Measure Enumeration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_Percent__c</fullName>
        <description>Measure Percent</description>
        <inlineHelpText>Measure Percent</inlineHelpText>
        <label>Measure Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Qualifier__c</fullName>
        <formula>TEXT( SIPM_KPI__r.Qualifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIPM_KPI__c</fullName>
        <description>SIPM KPI</description>
        <inlineHelpText>SIPM KPI</inlineHelpText>
        <label>SIPM KPI</label>
        <referenceTo>SPIM_KPI__c</referenceTo>
        <relationshipLabel>Supplier Measures</relationshipLabel>
        <relationshipName>Supplier_Measures</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Supplier</description>
        <inlineHelpText>Supplier</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Measures</relationshipLabel>
        <relationshipName>Supplier_Measures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>TEXT( SIPM_KPI__r.UOM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>Supplier Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>SIPM_KPI__c</columns>
        <columns>Qualifier__c</columns>
        <columns>KPI_Target__c</columns>
        <columns>Measure_Date__c</columns>
        <columns>MeasureNum__c</columns>
        <columns>Measure_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMRS-{00000000}</displayFormat>
        <label>SMeasureNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>